--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-module-sandbox",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "browser editor for code that gets 'compiled' on the server with node and run on the client",
   "repository": {
     "type": "git",
@@ -10,7 +10,8 @@
     "browserify": "~1.16.3",
     "toolbar": "0.0.4",
     "element-class": "0.0.1",
-    "browser-request": "0.2.0"
+    "browser-request": "0.2.0",
+    "inherits": "1.0.0"
   },
   "engines": {
     "node": "0.8.x"
