--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browser-module-sandbox",
-  "version": "0.1.1",
-  "description": "browser editor for code that gets 'compiled' on the server with node and run on the client",
+  "version": "1.0.0",
+  "description": "uses browserify-cdn to run node code in an iframe",
   "repository": {
     "type": "git",
     "url": "git@github.com:maxogden/browser-module-sandbox.git"
@@ -10,7 +10,8 @@
     "iframe": "0.0.2",
     "browser-request": "0.2.0",
     "inherits": "1.0.0",
-    "extend": "1.1.3"
+    "extend": "1.1.3",
+    "detective": "~2.1.2"
   },
   "engines": {
     "node": "0.8.x"
