--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "browser-module-sandbox",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "uses browserify-cdn to run node code in an iframe",
   "repository": {
     "type": "git",
     "url": "git@github.com:maxogden/browser-module-sandbox.git"
   },
   "dependencies": {
-    "iframe": "0.0.2",
-    "browser-request": "0.2.0",
-    "inherits": "1.0.0",
+    "iframe": "~0.0.2",
+    "inherits": "~1.0.0",
     "detective": "~2.1.2",
-    "browser-module-cache": "0.1.1"
+    "browser-module-cache": "0.1.1",
+    "browser-request": "~0.3.1"
   },
   "engines": {
     "node": "0.8.x"
