--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-module-sandbox",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "uses browserify-cdn to run node code in an iframe",
   "repository": {
     "type": "git",
@@ -13,7 +13,15 @@
     "browser-module-cache": "~0.1.3",
     "browser-request": "~0.3.1"
   },
-  "engines": {
-    "node": "0.8.x"
-  }
+  "bugs": {
+    "url": "https://github.com/maxogden/browser-module-sandbox/issues"
+  },
+  "homepage": "https://github.com/maxogden/browser-module-sandbox",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
