--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "url": "git@github.com:maxogden/browser-module-sandbox.git"
   },
   "dependencies": {
-    "iframe": "~0.0.2",
-    "inherits": "~1.0.0",
-    "detective": "~2.1.2",
     "browser-module-cache": "~0.1.3",
-    "browser-request": "~0.3.1"
+    "browser-request": "~0.3.3",
+    "detective": "^4.0.0",
+    "iframe": "intesso/iframe",
+    "inherits": "^2.0.1"
   },
   "bugs": {
     "url": "https://github.com/maxogden/browser-module-sandbox/issues"
