--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-module-sandbox",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "uses browserify-cdn to run node code in an iframe",
   "repository": {
     "type": "git",
@@ -10,7 +10,7 @@
     "browser-module-cache": "~0.1.3",
     "browser-request": "~0.3.3",
     "detective": "^4.0.0",
-    "iframe": "intesso/iframe",
+    "iframe": "^0.3.1",
     "inherits": "^2.0.1"
   },
   "bugs": {
