--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "browser-module-cache": "~0.1.3",
     "browser-request": "~0.3.3",
     "detective": "^4.0.0",
-    "iframe": "^0.3.1",
+    "iframe": "voronianski/iframe",
     "inherits": "^2.0.1"
   },
   "bugs": {
