--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-module-sandbox",
-  "version": "1.4.5",
+  "version": "2.0.0",
   "description": "uses browserify-cdn to run node code in an iframe",
   "repository": {
     "type": "git",
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "browser-module-cache": "~0.1.3",
-    "browser-request": "~0.3.3",
     "detective": "^4.0.0",
     "iframe": "^1.0.0",
-    "inherits": "^2.0.1"
+    "inherits": "^2.0.1",
+    "superagent": "^4.0.0-beta.5"
   },
   "bugs": {
     "url": "https://github.com/maxogden/browser-module-sandbox/issues"
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/maxogden/browser-module-sandbox",
   "main": "./src/index.js",
   "devDependencies": {
+    "husky": "^1.1.4",
+    "prettier": "^1.15.2",
+    "pretty-quick": "^1.8.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
@@ -26,7 +29,13 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.config --progress --colors",
     "watch": "webpack --config webpack.config --colors --watch",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "prepublish": "npm run build"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged --ignore-path ./dist"
+    }
   },
   "license": "MIT"
 }
